@@ -1,6 +1,14 @@
+May 25, 2004
+
+  * ENHANCED: Also use the default engine.  This means no engines are created
+    if they are not needed.
+
+  * ENHANCED: Initially only make a single engine.  Make upto 10 as they
+    are needed.  (JW)
+
 May 24, 2004
 
-  * ADDED: Initial test suite (check.pl)
+  * ADDED: Initial test suite (check.pl) (JW)
 
 May 14, 2004
 
